API/Kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: orleansgroupacr.azurecr.io/api:v2
        ports:
        - containerPort: 8080
        - containerPort: 11111
        - containerPort: 30000
