API/Kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: LoadBalancer    
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
