API/Kubernetes/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
 ingressClassName: webapprouting.kubernetes.azure.com
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: api
           port:
             number: 80
     - path: /dashboard
       pathType: Prefix
       backend:
         service:
           name: api
           port:
             number: 81
